backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorrag-backend
  labels:
    app: tensorrag-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorrag-backend
  template:
    metadata:
      labels:
        app: tensorrag-backend
    spec:
      containers:
        - name: tensorrag-backend
          image: poridhi/tensorrag:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: tensorrag-backend-svc
  namespace: ingress-staging
  labels:
    app: tensorrag-backend
spec:
  selector:
    app: tensorrag-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-tensorrag-backend-ingress
  namespace: ingress-staging
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api-stg-tensorrag.internal.poridhi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tensorrag-backend-svc
                port:
                  number: 80
